# rest_rpc

./: .gitignore  CMakeLists.txt  阅读记录.md
basic_code/: CMakeLists.txt  about_enable_if.cpp  baisc_connect.cpp  io_service_pool.cpp  shell.sh  test_codec.cpp  test_io_service_pool.cpp  test_router.cpp
examples/client/: main.cpp
include/rest_rpc/: codec.h  connection.h  const_vars.h  io_service_pool.h  router.h  rpc_client.hpp  rpc_server.h  shell.sh
mycode/: CMakeLists.txt
mycode/client/: client1.cpp  client2.cpp  main.cpp  sub_client.cpp
mycode/server/: main.cpp  pub_server.cpp  server1.cpp
mycode/simple/: basic_example.cpp
tests/: CMakeLists.txt  test_codec.cpp
